--- a/package.json
+++ b/package.json
@@ -5,27 +5,32 @@
   "author": "Paolo Zirotti",
   "bugs": "https://github.com/paolino7/quickcommands/issues",
   "dependencies": {
-    "@oclif/command": "^1",
-    "@oclif/config": "^1",
-    "@oclif/errors": "^1",
-    "@salesforce/command": "^1.4.1",
-    "@salesforce/core": "^1.3.2",
-    "tslib": "^1"
+    "@oclif/command": "^1.5.19",
+    "@oclif/config": "^1.14.0",
+    "@oclif/errors": "^1.2.2",
+    "@salesforce/command": "^3.0.0",
+    "@salesforce/core": "^2.2.0",
+    "@types/object-assign-deep": "^0.4.0",
+    "@types/request": "^2.48.4",
+    "object-assign-deep": "^0.4.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1",
-    "@oclif/plugin-help": "^2",
-    "@oclif/test": "^1",
-    "@salesforce/dev-config": "1.4.1",
-    "@types/chai": "^4",
-    "@types/mocha": "^5",
-    "@types/node": "^10",
-    "chai": "^4",
-    "globby": "^8",
-    "mocha": "^5",
-    "nyc": "^14",
-    "ts-node": "^8",
-    "tslint": "^5"
+    "@oclif/dev-cli": "^1.22.2",
+    "@oclif/plugin-help": "^2.2.3",
+    "@oclif/test": "^1.2.5",
+    "@salesforce/dev-config": "^1.5.0",
+    "@types/chai": "^4.2.9",
+    "@types/mocha": "^7.0.1",
+    "@types/node": "^13.7.2",
+    "chai": "^4.2.0",
+    "globby": "^11.0.0",
+    "mocha": "^7.0.1",
+    "nyc": "^15.0.0",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
