Add download functionality file

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-*-debug.log
-*-error.log
-/.nyc_output
-/dist
-/lib
-/package-lock.json
-/tmp
-node_modules
-.images
-.vscode
-
+node_modules/
+package-lock.json
+yarn-error.log
 .DS_Store
+.images/
+.vscode/
+.circleci/
+lib/
