--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "@oclif/command": "^1.5.19",
     "@oclif/config": "^1.14.0",
     "@oclif/errors": "^1.2.2",
-    "@salesforce/command": "^3.0.0",
-    "@salesforce/core": "^2.2.0",
+    "@salesforce/command": "^3.1.0",
+    "@salesforce/core": "^2.19.1",
     "@types/object-assign-deep": "^0.4.0",
     "@types/request": "^2.48.4",
+    "json2csv": "^5.0.6",
     "object-assign-deep": "^0.4.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
+    "shelljs": "^0.8.4",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.22.2",
     "@oclif/plugin-help": "^2.2.3",
     "@oclif/test": "^1.2.5",
-    "@salesforce/dev-config": "^1.5.0",
+    "@salesforce/dev-config": "^1.6.0",
     "@types/chai": "^4.2.9",
+    "@types/json2csv": "^5.0.1",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.2",
     "@types/request-promise": "^4.1.45",
